syntax = "proto3";

package worker;

service NodeTypeService {
  rpc GetNodeType (NodeTypeRequest) returns (NodeTypeAnswer);
}

enum NodeType {
 MANAGER = 0;
 WORKER = 1;
}

message NodeTypeRequest {}
message NodeTypeAnswer {
 NodeType node_type = 1;
}

message ManagerRequest {}
message ManagerAnswer {
    bool accepted = 1;
}
// When a node receives a message which can only be sent to a worker
// from its registered manager.
// Or when a node receives a message which can only be sent to a manager
// from one of its registered workers.
message NotMine {}

// When a manager or a worker want to unsubscribe to one another
message ManagerBye {}
message ManagerByeAnswer {}

message ExecuteTask {
 bytes job_addr = 1;
 int32 argument = 2;
}
message TaskResult {
 int32 result = 1;
}

message WorkerMsgWrapper {
 oneof msg {
   NodeTypeRequest node_type_request = 1;
   NodeTypeAnswer node_type_answer = 2;
   ManagerRequest manager_request = 3;
   ManagerAnswer manager_answer = 4;
   NotMine not_mine = 5;
   ManagerBye manager_bye = 6;
   ManagerByeAnswer manager_bye_answer = 7;
   ExecuteTask execute_task = 9;
   TaskResult task_result = 10;
 }
}
